objects/evt__Ticket__c.object
<CustomObject>
    <customHelpPage>evt__EventManagementHelp</customHelpPage>
    <description>Reserved for future use.</description>
    <fields>
        <fullName>evt__Attendee_Status__c</fullName>
        <formula>TEXT(evt__Attendee__r.evt__Invitation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>evt__Attendee__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ticket-holder</description>
        <inlineHelpText>Ticket-holder</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Discount_Event_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discounted fee for children/seniors/etc.</description>
        <inlineHelpText>Discounted fee for children/seniors/etc.</inlineHelpText>
        <label>Discount Event Fee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>evt__Event_Fee__c.evt__Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.evt__Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>evt__Event_Fee__c</referenceTo>
        <relationshipLabel>Tickets (Discount Event Fee)</relationshipLabel>
        <relationshipName>Discount_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Event_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Regular price event fee.</inlineHelpText>
        <label>Event Fee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>evt__Event_Fee__c.evt__Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.evt__Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>evt__Event_Fee__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Event__c</fullName>
        <label>Event</label>
        <referenceTo>evt__Special_Event__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>evt__Hold_Until__c</fullName>
        <description>Puts the ticket on hold during ticket selection process so two customers can&apos;t buy the same ticket.</description>
        <inlineHelpText>Puts the ticket on hold during ticket selection process so two customers can&apos;t buy the same ticket.</inlineHelpText>
        <label>Hold Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>evt__Notes__c</fullName>
        <description>Notes to ticket holder about the seat or ticket being purchased.</description>
        <inlineHelpText>Notes to ticket holder about the seat or ticket being purchased.</inlineHelpText>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Row__c</fullName>
        <label>Row</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Seat__c</fullName>
        <label>Seat</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Section__c</fullName>
        <label>Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>evt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TX{00000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>